cmake_minimum_required(VERSION 3.24)
project(data_structure)

set(CMAKE_CXX_STANDARD 14)

include_directories("Data Structure")

add_executable(data_structure
        "Data Structure/cmake-build-debug/Testing/Temporary/LastTest.log"
        "Data Structure/cmake-build-debug/build.ninja"
        "Data Structure/cmake-build-debug/cmake_install.cmake"
        "Data Structure/cmake-build-debug/CMakeCache.txt"
        "Data Structure/cmake-build-debug/linked_list"
        "Data Structure/cmake-build-debug/linked_list.cbp"
        "Data Structure/cmake-build-debug/Makefile"
        "Data Structure/CMakeLists.txt"
        "Data Structure/double linked list.h"
        "Data Structure/main.cpp"
        "Data Structure/single linked list.h"
        "Data Structure/stack.h" "Data Structure/queue.h" "Data Structure/binary tree.h" "Data Structure/BinarySearchTree.h" "Data Structure/binary heap.h" "Data Structure/AVL tree.h" "Data Structure/trie.h" "Data Structure/hash table.h")
